Fri Jun  9 19:34:05 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Fri May 26 20:19:15 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for building shared libraries.

Tue May 23 16:22:57 1995  Theodore Y. Ts'o  (tytso@dcl)

	* asn1_decode.c: Rearrange #include files so that krb5.h gets
		included first, so that the debugging information can be
		more efficiently collapsed since the type numbers will be
		the same.

	* asn1_encode.h: Rearrange the #include files so that the type
		numbers are the same.

Thu Apr 13 20:13:38 1995 Keith Vetter (keithv@fusion.com)

	* asn1_k_decode.c: fixed up 'unreferenced local variable' problems.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.

Wed Mar 22 09:39:55 1995    <tytso@rsx-11.mit.edu>

	* asn1_k_decode.c (setup, next_tag, apptag, get_field_body,
		get_lenfield_body, asn1_decode_ticket): Use the
		taglength to determine whether or not the indefinite
		encoding was used, and if so skip over the termination
		flag bytes in the ASN.1 stream.

	* asn1buf.c (asn1buf_imbed, asn1buf_remains): Make changes to
		allow for indefinite encodings.  asn1buf_remains() is now
		only used for decoding structures and arrays (i.e., asn.1
		constructs which terminate indefinite encodings with two
		zero octets.

		[ Note these fixes to support indefinite encoding
		aren't terribly clean; some invalid encodings may
		be accepted when they should not be.  This should be
		looked at in more detail later.]

	* asn1_get.c (asn1_get_tag): Inline original asn1buf_remains()
		code, since asn1_get_tag doesn't use asn1buf_remains in
		the context of a structure or an array.

Sat Mar 25 14:12:31 1995  Tom Yu  (tlyu@dragons-lair)

	* asn1_decode.c: move declaration of gmt_mktime() outside of
	asn1_decode_generaltime() so that compilers like Ultrix cc that