@@ -1,3 +1,8 @@
+Sat Jun 17 00:00:33 1995  Theodore Y. Ts'o  (tytso@dcl)
+
+	* asn1_get.c (asn1_get_tag): Added change to allow for 
+		ASN.1 indefinite encoding; needed for DCE compatibility.
+
 Fri Jun  9 19:34:05 1995    <tytso@rsx-11.mit.edu>
 
 	* configure.in: Remove standardized set of autoconf macros, which
